[project]
name = "prompt808"
description = "Prompt808 allows you to analyze images, build style libraries, and generate prompts that match any learned aesthetic."
version = "4.1.0"
license = {file = "LICENSE"}
dependencies = [
    "transformers",
    "torch",
    "huggingface-hub",
    "accelerate",
    "bitsandbytes",
    "psutil",
    "sentence-transformers",
    "scikit-learn",
    "python-multipart",
    "Pillow",
]

[project.urls]
Repository = "https://github.com/Machete3000/Prompt808"
Homepage = "https://prompt808.com"

[tool.comfy]
PublisherId = "machete3000"
DisplayName = "Prompt808"
Icon = "camera"
